# tictactoe

./: .cspell.json  .cz.toml  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .jscpd.json  .mega-linter.yml  .pre-commit-config.yaml  .releaserc.yml  .rustfmt.toml  .secrets.baseline  .vale.ini  .yamlfmt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  about.toml  bacon.toml  deny.toml  licenses_report.json  licenses_report.md  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yaml  ci.yaml  code_coverage.yaml  deploy_mdbook.yaml  get_next_version.yaml  release.yaml  release_upload.yaml
.github/workflows/workflows/: ci.yaml
.reuse/: dep5
guide/: .gitignore  book.toml
guide/src/: SUMMARY.md  chapter_1.md
meta/: LICENSE-HEADER  licenses.hbs
meta/vale-styles/config/vocabularies/Custom/: accept.txt
scripts/: generate_about_json.sh  generate_about_md.sh
src/: components.rs  gameplay.rs  main.rs
src/components/: square.rs  square_value.rs
src/gameplay/: errors.rs  game.rs  player.rs
src/lib_menace_c/: Cargo.toml
src/lib_menace_c/src/: lib.rs
src/lib_menace_s/: Cargo.toml
src/lib_player/: Cargo.toml
src/lib_player/src/: lib.rs  player.rs
src/lib_tictacrustle/: board.rs  errors.rs  game.rs  lib.rs  player.rs  square.rs  square_value.rs
src/lib_tictactoe_menace/: Cargo.toml
src/lib_tictactoe_menace/src/: square_value.rs
src/lib_ttt/: Cargo.toml
src/ticatactoe_menace/src/: lib.rs  square.rs
src/ticatactoe_menace_c/: Cargo.toml
src/tictactoe_menace_c/: Cargo.toml
src/tictactoe_menace_player/: Cargo.toml
src/tictactoe_menace_player/src/: lib.rs
src/tictactoe_menace_s/: Cargo.toml
src/ttrustle/: components.rs  gameplay.rs  main.rs
src/ttrustle/components/: board.rs  square.rs
src/ttrustle/gameplay/: errors.rs  player.rs
src/ttt_menace/: lib.rs  main.rs
src/tttm/: Cargo.toml
src/tttm/src/: components.rs  gameplay.rs  main.rs
src/tttm/src/components/: board.rs  square.rs
src/tttm/src/gameplay/: errors.rs  game.rs  player.rs
