[package]
name = "ttt_menace"
version ="1.0.0-alpha.4"
edition = "2021"
readme = "README.md"
repository = "https://github.com/AliSajid/tictactoe"
description = "Tic Tac Toe game with a Menace AI"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tttm"
path = "src/main.rs"

[dependencies]


[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

[profile.release]
opt-level = 's'
debug = false
debug-assertions = false
strip = "symbols"
overflow-checks = true
lto = true
codegen-units = 1
incremental = false
