[workspace]
members = [
    "src/tttm",
    "src/lib_menace_c",
    "src/lib_menace_s",
    "src/lib_player",
    "src/ticatactoe_menace",
]

[workspace.package]
authors = ["Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>"]
categories = ["game", "ai", "tictactoe", "menace"]
description = "Tic Tac Toe game with a Menace AI"
documentation = "https://docs.rs/crate/ttt_menace"
edition = "2021"
homepage = "https://aliimami.com/ttt_menace"
keywords = ["tictactoe", "menace", "rust"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AliSajid/tictactoe"
version ="1.0.0-alpha.5"

[workspace.dependencies]
log = "0.4.17"
rand = "0.8.5"
env_logger = "0.10.0"
serde = "1.0.152"
serde_json = "1.0.91"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

[profile.release]
opt-level = 's'
debug = false
debug-assertions = false
strip = "symbols"
overflow-checks = true
lto = true
codegen-units = 1
incremental = false
