# SPDX-FileCopyrightText: 2022 - 2024 Ali Sajid Imami
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

[package]
name = "tictacrustle"
authors = ["Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>"]
categories = ["game", "ai", "tictactoe", "menace"]
description = "Tic Tac Toe game with a Menace[ing] AI"
documentation = "https://docs.rs/crate/ttt_menace"
edition = "2021"
homepage = "https://aliimami.com/ttt_menace"
keywords = ["tictactoe", "menace", "rust"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AliSajid/tictactoe"
version = "1.0.0-next.2"

[lib]
name = "tictacrustle"
path = "src/lib_tictacrustle/lib.rs"

[[bin]]
name = "ttrustle"
path = "src/ttrustle/main.rs"

[dependencies]
color-eyre = "0.6.2"
env_logger = "0.11.2"
log = "0.4.20"
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.91"

[dev-dependencies]
rstest = "0.18.2"

[lints.rustdoc]
broken_intra_doc_links = "deny" # Ensure that all intra-doc links point to valid items
missing_docs = "forbid" # Ensure that all public items have documentation
invalid_rust_codeblocks = "deny" # Ensure that all rust code blocks are valid
redundant_explicit_links = "deny" # Ensure that all explicit links are necessary

[profile.dev]
opt-level = 1 # Do not optimize
debug = true # Generate debug symbols

[profile.release]
opt-level = 'z' # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Compile the whole crate at once
panic = "abort" # Abort on panic
strip = "symbols" # Strip debug symbols
