[package]
name = "tttm"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version= "1.0.0-alpha.5"

[[bin]]
name = "tttm"
path = "src/main.rs"
